--- a/celery.conf
+++ b/celery.conf
@@ -1,6 +1,6 @@
 [program:celery]
 directory = /home/ubuntu/ECE1779_Assignment1
-command = /usr/local/bin/celery worker -A app -l info
+command = /usr/local/bin/celery worker -A app -l info --beat
 stdout_logfile = /home/ubuntu/ECE1779_Assignment1/celeryd.log
 stderr_logfile = /home/ubuntu/ECE1779_Assignment1/celeryd.err
 autostart = true
